<resources>
    <string name="YOUTUBE_KEY">AIzaSyBOfEZyQBkYytBw-Ivm3mzhT69xuU_-QLM</string>

    <string name="app_name">D3IF Booklet</string>
    <string name="action_settings">Pengaturan</string>
    <string name="project_example_title">TooLips Words and Sentences Learning Application for Hearing Impirred Children</string>
    <string name="project_example_description">TooLips merupakan aplikasi pembelajaran pada platform Android yang dibuat untuk anak tunarungu melalui penyampaian materi yang menarik yaitu dengan menggunakan media gambar, tulisan, suara, dan video yang akan melatih kemampuan berbahasa dan daya ingat anak tunarungu. Aplikasi ini dibuat dengan prinsip-prinsip pembelajaran khusus bagi anak tunarungu seperti keterarahwajahan yaitu melalui video, keterarahsuaraan melalui suara/audio, visualisasi yaitu melalui gambar tulisan, serta prinsip pembelajaran khusus lainnya.</string>
    <string name="pembimbing">Pembimbing</string>
    <string name="pengembang">Pengembang</string>
    <string name="screenshot">Screenshot</string>
    <string name="tutup">Tutup</string>
    <string name="batal">Batal</string>
    <string name="cari">Cari</string>
    <string name="cari_project">Cari project</string>
    <string name="cari_tidak_ditemukan">Proyek tidak tersedia</string>
    <string name="error_connection">Tidak dapat mengunduh data.\nketuk disini untuk mencoba lagi.</string>
    <string name="error_connection2">Tidak dapat mengunduh data</string>
    <string name="error_auth">Tidak dapat mengotentikasi</string>

    <string name="pa">PA</string>
    <string name="pt1">PT1</string>
    <string name="pt2">PT2</string>
    <string name="proyek_akhir">Proyek Akhir</string>
    <string name="proyek_tingkat_2">Proyek Tingkat 2</string>
    <string name="proyek_tingkat_1">Proyek Tingkat 1</string>

    <string name="versi">Versi</string>
    <string name="versi_saat_ini">Versi %1$s</string>
    <string name="perbarui_dokumen">Perbarui dokumen</string>
    <string name="tersedia_versi_baru">Tersedia versi %1$s</string>
    <string name="mengunduh_booklet">Mengunduh versi %1$s ....</string>
    <string name="mengunduh">Mengunduh</string>
    <string name="unduh">Unduh</string>
    <string name="pembaruan">Pembaruan</string>
    <string name="periksa_pembaruan">Periksa pembaruan</string>
    <string name="tentang">Tentang</string>
    <string name="versi_baru_tidak_tersedia">Pembaruan tidak tersedia. Versi yang sama tetap bisa di unduh.</string>
    <string name="coba_lagi">Coba lagi</string>

    <string name="periksa_skema">Periksa skema</string>
    <string name="memeriksa">Memeriksa....</string>
    <string name="skema_valid">Skema valid</string>
    <string name="skema_error">Error : %1$s</string>

    <string name="deskripsi">Aplikasi pustaka karya D3 Teknik Informatika, Fakultas Ilmu Terapan, Telkom University.</string>
    <string name="copyright">Copyright &#169; 2016</string>
    <string name="copyright_team">D3 Teknik informatika, Telkom University</string>
    <string name="developer">Pengembang</string>
    <string name="developer_name">Agi Maulana (6706144099)\nD3 Teknik Informatika 2014</string>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="lorem_ipsum_long">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</string>
</resources>
