<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/cari"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always" />

    <group>
        <item
            android:id="@+id/action_setting"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_about"
            android:orderInCategory="100"
            android:title="@string/tentang"
            app:showAsAction="never" />
    </group>
</menu>
