<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proyek_tingkat_1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memeriksa"
                android:id="@+id/textview_validation_result_1"/>

            <ProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/progressBar"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proyek_tingkat_2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memeriksa"
                android:id="@+id/textview_validation_result_2" />

            <ProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/progressBar2"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proyek_akhir"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memeriksa"
                android:id="@+id/textview_validation_result_3" />

            <ProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/progressBar3"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>