<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/button_check_version"
        android:gravity="center_vertical"
        android:background="@drawable/click_transparent_grey"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/progressBar"
            android:layout_toStartOf="@+id/progressBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/periksa_pembaruan"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_versi_baru"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/textSecondary"
                android:visibility="invisible"/>

        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_download"
        android:visibility="gone">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@drawable/click_transparent_grey"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/progressBar2"
                android:layout_toStartOf="@+id/progressBar2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unduh"
                    android:drawableLeft="@drawable/ic_file_download_grey_600_24dp"/>

            </LinearLayout>

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar2"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

    </LinearLayout>

</LinearLayout>