<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarLayout">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/collapsing_toolbar"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/imageview_poster"
                    android:src="@drawable/poster"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/relativeLayout"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/black_transparent_circular"
                        android:src="@drawable/ic_play_arrow_white_48dp"
                        android:layout_centerInParent="true"
                        app:layout_collapseMode="parallax"/>

                </RelativeLayout>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressbar"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:visibility="gone"/>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="16dp"
            android:id="@+id/linearLayout">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_project_level"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:text="@string/proyek_akhir"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_project_title"
                android:text="@string/project_example_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white" />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:clipToPadding="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/webview"
                android:background="@color/white"
                android:padding="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recyclerview"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressbar_2"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengembang"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp"
                android:textColor="@color/deepOrange_500"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:id="@+id/recyclerview2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pembimbing"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp"
                android:textColor="@color/deepOrange_500"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerview3"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/youtube_layout"
        style="@style/dialog_fade"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/fragment_container"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar_youtube"
            android:background="@color/black_transparency_50">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/button_back"
                android:background="@drawable/click_transparent_black">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close_grey_600_24dp"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/button_launch"
                android:background="@drawable/click_transparent_black"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launch_grey_600_24dp"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>